# easyasyncpg

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: main.yml
easyasyncpg/: __init__.py  named_parameter_query.py  role.py  secondary_connections.py
tests/functional/: conftest.py  test_easyasyncpg.py  test_execute.py  test_fetch.py
tests/unit/: test_named_parameter_query.py  test_secondary_connections.py
